apps/guardrail-web/overlays/production/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guardrail-web
spec:
  rules:
    - host: crashes.workrave.org
  tls:
    - hosts:
        - crashes.workrave.org
